# agentic-fed-taskforce

./: .gitignore  Agentic-Fed-Taskforce-Blueprint.md  BRIEF.md  COVER_NOTE.md  DATA-SOURCES.md  EXPERIMENT.md  FINDINGS.md  LICENSE  PRE-REGISTRATION.md  README.md  app.py  backtest.py  backtest_real.py  committee.py  config.py  data_real.py  nowcast.py  objective.py  program.md  pyproject.toml  report.py  sensitivity.py
tests/: test_core.py
